--- a/Unit-1/Week-1/day3assigment.html
+++ b/Unit-1/Week-1/day3assigment.html
@@ -4,15 +4,23 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <style>
+      h1{
+        text-align: center;
+        color: crimson;      }
+        body{
+          background-color: yellowgreen;
+        }
+    </style>
     
 </head>
 <body>
-    <h1>Cake order form</h1>
-    <p>First name: <input type="text"></p>
-    <p>Last name: <input type="text"></p>
-    <p>Email Adress: <input type="text"></p>
-    <p>contact number: <input type="text"></p>
-    <p>preferred delivery: <input type="date"></p>
+    <h1>*Cake order form*</h1>
+    <p>First name:- <input type="text"></p>
+    <p>Last name:- <input type="text"></p>
+    <p>Email Adress:- <input type="text"></p>
+    <p>contact number:- <input type="text"></p>
+    <p>preferred delivery:- <input type="date"></p>
     <p>Size:</p>
      <input type="radio">small <input type="radio">medium <input type="radio">large
      <p>Flavor:</p>
@@ -40,3 +48,5 @@
       <p>pin <input type="text"></p>
       <p>Additional note </p>
       <textarea name="" id="" cols="65" rows="7"></textarea>
+      <br>
+      *<input type="submit" value="submit order">*
