--- a/Unit-1/Week-1/day3assigment.html
+++ b/Unit-1/Week-1/day3assigment.html
@@ -50,3 +50,4 @@
       <textarea name="" id="" cols="65" rows="7"></textarea>
       <br>
       *<input type="submit" value="submit order">*
+     <button>submit order</button>
