--- a/Unit-1/Week-1/day4assigment.html
+++ b/Unit-1/Week-1/day4assigment.html
@@ -10,6 +10,18 @@
             height: 100px;
             
         }
+        body{
+            background-color: darkgray;
+        }
+        p{
+            color:brown;
+        }
+        ul{
+            color: green;
+        }
+        table{
+            color: darkslateblue;
+        }
     </style>
 </head>
 <body>
