--- a/Unit-1/Week-1/day4assigment.html
+++ b/Unit-1/Week-1/day4assigment.html
@@ -25,6 +25,7 @@
     </style>
 </head>
 <body>
+   <script src="deepak.js"></script>
     <p><b>list of courses for fall 2013 :</b></p>
     <ul>
     <li>MDSE 4040:visual marchendising</li>
