--- a/Unit-1/Week-2/css03/class,,/class1.html
+++ b/Unit-1/Week-2/css03/class,,/class1.html
@@ -1,4 +1,4 @@
-<!-- <!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -24,8 +24,8 @@
                    }
 
         .army{
-            border: 1px solid black ;
-            background-color: ;
+            border: 1px solid rgb(140, 37, 37) ;
+            background-color: black;
             border-radius: 20px;
 
             
@@ -82,4 +82,4 @@
     </div>
 
 </body>
-</html>  -->
+</html>
