--- a/Unit-1/Week-3/day4/assigment5.html
+++ b/Unit-1/Week-3/day4/assigment5.html
@@ -14,7 +14,8 @@
             margin-top: 300px;
             border: solid white;
             border-radius: 10px;
-            
+            /* box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+             */
         }
         .number1{
             background-color: white;
@@ -123,23 +124,64 @@
 <body>
     <div id="box1">
         <button class="number1"></button>
-        <button class="number2">1</button>
-        <button class="number3">2</button>
-        <button class="number4">3</button>
-        <button class="number5">+</button>
-        <button class="number6">4</button>
-        <button class="number7">5</button>
-        <button class="number8">6</button>
-        <button class="number9">-</button>
-        <button class="number10">7</button>
-        <button class="number11">8</button>
-        <button class="number12">9</button>
-        <button class="number13">x</button>
-        <button class="number14">c</button>
-        <button class="number15">0</button>
-        <button class="number16">=</button>
-        <button class="number17">/</button>
-        
+        <button class="number1"></button>
+        <button class="number1"></button>
+        <button class="number1"></button>
+        <button class="number1"></button>
+        <button class="number1"></button>
+        <button class="number1"></button>
+        <button class="number1"></button>
+        <button class="number1"></button>
+        <button class="number1"></button>
+        <button class="number1"></button>
+        <button class="number1"></button>
+        <button class="number1"></button>
+        <button class="number1"></button>
+        <button class="number1"></button>
+        <button class="number1"></button>
+        <button class="number1"></button>
+        <button class="number1"></button>
+        <button class="number1"></button>
+        <button class="number1"></button>
+        <button class="number1"></button>
+        <button class="number1"></button>
+        <button class="number1"></button>
+        <button class="number1"></button>
+        <button class="number1"></button>
+        <button class="number1"></button>
+        <button class="number1"></button>
+        <button class="number1"></button>
+        <button class="number1"></button>
+        <button class="number1"></button>
+
+
+        <button class="number1"></button>
+        <button class="number1"></button>
+        <button class="number1"></button>
+        <button class="number1"></button>
+        <button class="number1"></button>
+        <button class="number1"></button>
+        <button class="number1"></button>
+        <button class="number1"></button>
+        <button class="number1"></button>
+        <button class="number1"></button>
+
+
+        <button class="number1"></button>
+        <button class="number1"></button>
+        <button class="number1"></button>
+        <button class="number1"></button>
+        <button class="number1"></button>
+        <button class="number1"></button>
+        <button class="number1"></button>
+        <button class="number1"></button>
+        <button class="number1"></button>
+        <button class="number1"></button>
+
+
+
+
+
 
     </div>
 </body>
