--- a/Unit-1/evalution/pethology.html
+++ b/Unit-1/evalution/pethology.html
@@ -6,6 +6,9 @@
     <title>Document</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.0/css/all.min.css" integrity="sha512-9xKTRVabjVeZmc+GUW8GgSmcREDunMM+Dt/GrzchfN8tkwHizc5RP4Ok/MXFFy5rIjJjzhndFScTceq5e6GvVQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <style>
+        body{
+            overflow-x: hidden;
+        }
         #box1{
             width: 100%;
             height: 50px;
@@ -736,7 +739,15 @@ margin-top: 30px;
 #jk h1:hover{
     cursor: pointer;
 }
+@media screen and (min-width:450px) and ( max-width:780px){
+    #box1{
+        width: 400px;
+     #box2{
+        width: 400px;
+     }
+    }
 
+}
     </style>
 </head>
 <body>
