--- a/Unit-1/EVALUTION1/EVALUTION.HTML
+++ b/Unit-1/EVALUTION1/EVALUTION.HTML
@@ -5,6 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <style>
+        body{
+            overflow-x: hidden;
+        }
         .nav{
             /* width: 100%; */
             height: 50px;
